21_Kubernetes/14_Updating_applications/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool-deployment
  annotations:
    kubernetes.io/change-cause: "Update to 1.28"
  namespace: default
  labels:
    app: nginx-multitool
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  replicas: 5
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:1.28
      - name: multitool
        image: wbitt/network-multitool:latest
